2004-01-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* configure.ac, NEWS: Bump version to 1.8.0b.

2004-01-05  Alexandre Duret-Lutz  <adl@gnu.org>

	Mimic Paul Eggert's changes to Autoconf.
	* Makefile.am (automake, aclocal): Use `chmod a-w', not `chmod -w'.
	* lib/Automake/Makefile.am (Config.pm): Likewise.
	* m4/Makefile.am ($(top_srcdir)/m4/amversion.m4): Likewise.

	* lib/am/data.am, lib/am/lisp.am, lib/am/python.am,
	lib/am/scripts.am: Strip any leading $(srcdir) from nobase_ files.
	This fixes installation of nobase_ files in VPATH setups with Sun
	and OSF1/Tru64 Make.
	* tests/nobase.test: Augment to check installation from VPATH
	builds.

2004-01-04  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/texinfo.tex: New upstream version.

	* NEWS: Summarize recent fixes.

	* m4/mkdirp.m4: Do not use `-m 0755'.  This overrides special bits
	and break setups where 775 directories are expected.  Just obey
	umask as we did in the past.
	Report from Harlan Stenn.

2004-01-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_texinfo_file): Do not compare $outfile to ''
	as $outfile might not be defined at all.

	* lib/Automake/Variable.pm (define): Rework the way we check
	Automake variable definition.  Ensure consistent :=/+=/=
	definitions only for variables that have been and are defined by
	Automake, and make it an internal error.  Ignore Automake
	attempts to touch a user variable, even with += assignments.
	* tests/txinfo29.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo29.test.
	Reported by Bruce Korb.

2004-01-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/libtool5.test, tests/ltcond.test, tests/ltcond2.test,
	* tests/ltconv.test: Run automake with --add-missing, because
	the CVS version of libtoolize no longer install config.sub and
	config.guess by default.

	Fix for PR automake/319:
	* aclocal.in (scan_m4_files): Scan configure.ac.
	(trace_used_macros, write_aclocal): Remove configure.ac from the
	list of files to include.