@@ -1,4 +1,4 @@
 @set UPDATED 26 December 2003
 @set UPDATED-MONTH December 2003
-@set EDITION 1.8.0b
-@set VERSION 1.8.0b
+@set EDITION 1.8.0c
+@set VERSION 1.8.0c
