@@ -1,4 +1,4 @@
-Bug fixed in 1.8.0b:
+Bug fixed in 1.8.0c:
 
 * Bugs introduced by 1.8:
 
