@@ -1,5 +1,7 @@
 2004-01-06  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* configure.ac, NEWS: Bump version to 1.8.0c.
+
 	* configure.ac, NEWS: Bump version to 1.8.0b.
 
 2004-01-05  Alexandre Duret-Lutz  <adl@gnu.org>
